changed colors to fix contrast issues

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,33 +1,34 @@
 body {
-    background-color: #A9B19C;
+    background-color: #363635;
     font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-    color: #396A62;
+    color: #FB8423;
     font-size: 45px;
 }
 
 p {
     font-size: 20px;
+    color: #D8DECE;
     
 }
 .originals > h2 {
-    color: #497283;
+    color: #2DCD42;
     font-size: 35px;
 }
 
 .original-container {
-    color: #363635;
+    color: #D8DECE;
 }
 
 .copies > h2 {
-    color: #497283;
+    color: #2DCD42;
     font-size: 35px;
 }
 
 button {
-    background-color: #396A62;
+    background-color: #FB8423;
     color: #363635;
     border: none;
     padding: 10px 30px;
